------------------------------------------------------------------------------------

>>> NOTICE!!! <<<

This file contains SPOILERS, which might ruin your IVAN experience totally. The file
is also provided AS IS and is probably completely unreadable.

------------------------------------------------------------------------------------

March 27 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Infravision added to magpie so that AI doesn't do stupid things when player is invisibile

March 27 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* The slave is now better and his picture changes due to armor like the player's

March 27 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Unicorn sometimes teleport when they take hits (so that killing them when invisible isn't too easy)
	
March 27 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Throwing healing liquid or some other good potion to people doesn't make them
	  angry
	* The holy banana of Liukas Vipro renamed as the holy banana of Oily Orpiv
	* The cursor is now bigger
	* Skeletons and jackals are now easier to see

March 27 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Metallic hands are again shown correctly on the game screen
	* Corrected a bug in the messages after teleport
	* Doors created by a wand of door creation are now sometimes open

March 27 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* bug corrected: If multiple chests are stacked, only the top one can be opened with key.

March 27 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* (u)longlong type is no longer used

March 27 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Slow is now a hostile action
	* The encrypted scroll is now removed when the player talks to Petrus
	* GC levels 8 and 9 are now more difficult
	* The secret vault is now on a random level
	* RestoreBodyParts() now handles genies and angels correctly
	* Corrected a bug in the bodypart vanish code
	* Bodyparts of polymorphed monsters now vanish when severed