@@ -686,6 +686,9 @@ bool character::TryMove(vector2d MoveTo, bool DisplaceAllowed)
 	      if(HasPetrussNut() && !HasGoldenEagleShirt())
 		{
 		  game::TextScreen("An undead and sinister voice greets you as you leave the city behind:\n\n\"MoRtAl! ThOu HaSt SlAuGtHeReD pEtRuS aNd PlEaSeD mE!\nfRoM tHiS dAy On, ThOu ArT tHe DeArEsT sErVaNt Of AlL eViL!\"\n\nYou are victorious!");
+		  game::GetCurrentArea()->SendNewDrawRequest();
+		  game::DrawEverything();
+		  ShowAdventureInfo();
 		  PLAYER->AddScoreEntry("killed Petrus and became the Avatar of Chaos", 3, false);
 		  game::End();
 		  return true;
